istio_test.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-hello
  labels:
    app: java-hello
    service: java-hello
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: java-hello
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-hello-v1
  labels:
    app: java-hello
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-hello
      version: v1
  template:
    metadata:
      labels:
        app: java-hello
        version: v1
    spec:
      serviceAccountName: java-hello
      containers:
        - name: java-hello
          image: hejian/istio
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: wlp-output
              mountPath: /opt/ibm/wlp/output
          securityContext:
            runAsUser: 1000
      volumes:
        - name: wlp-output
          emptyDir: {}
        - name: tmp
          emptyDir: {}
---
